# pdf-splitter-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_setup.py
app/: config.py  main.py  mcp_agent.py  pdf_processor.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  logging.py
app/mcp/: __init__.py  server.py
app/services/: __init__.py  pdf_engine.py
integrations/: __init__.py  pdf_service_client.py
tests/: demo_integration.py  demo_post.py  test_setup.py  test_verification.py
