[project]
name = "pdf-splitter-mcp"
version = "1.0.0"
description = "High-performance PDF processing MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pypdf>=4.0.0",
    "mcp>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "integrations*"]
